# zabbix-mcp-server

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
deploy/: install.sh
src/zabbix_mcp/: __init__.py  cli.py  client.py  config.py  server.py
src/zabbix_mcp/api/: alerts.py  data_collection.py  monitoring.py  types.py  users.py
tests/: __init__.py  test_smoke.py
