[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabbix-mcp-server"
version = "1.12"
description = "Production-quality MCP server for the complete Zabbix API"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "initMAX s.r.o." }]
keywords = ["zabbix", "mcp", "model-context-protocol", "monitoring", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.1.3,<2.0",
    "zabbix-utils>=2.0.2,<3.0",
]

[project.scripts]
zabbix-mcp-server = "zabbix_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/initMAX/zabbix-mcp-server"
Repository = "https://github.com/initMAX/zabbix-mcp-server"
Issues = "https://github.com/initMAX/zabbix-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zabbix_mcp"]
